--- a/views/main/login.ejs
+++ b/views/main/login.ejs
@@ -8,29 +8,20 @@
             </div>
             <div class="card-body">
                 <!-- get envia pelo query params, o post envia dentro da requisição -->
-                <form method="post" action="/saveuser">
+                <form method="post" action="/authuser">
                     <div class="d-flex flex-row justify-content-around input-group-lg">
-                        <div class="col-xs-12">
-                            <label>Nome completo</label>
-                            <input name="name" type="text" placeholder="Escreva seu nome" class="form-control mb-3">
-                        </div>
                         <div>
                             <label>Email</label>
-                            <input name="email" type="email" placeholder="yourmail@mail.com" class="form-control mb-3"></input>
+                            <input name="email" type="email" class="form-control mb-3"></input>
                         </div>
-                    </div>
-                    <div class="d-flex flex-row justify-content-around">
-                        <div>
-                            <label>Idade</label>
-                            <input name="age" type="text" placeholder="23" class="form-control mb-3">
-                        </div>
-                        <div>
+                        <div class="col-xs-12">
                             <label>Senha</label>
-                            <input name="password" type="password" placeholder="digite sua senha" class="form-control mb-3"></input>
+                            <input name="password" type="password" class="form-control mb-3">
                         </div>
                     </div>
+
                     <div class="d-flex flex-row justify-content-around">
-                        <button class="btn btn-primary btn-lg" type="submit">Enviar</button>
+                        <button class="btn btn-primary btn-lg" type="submit">Entrar</button>
                     </div>
                     
                 </form>
